--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.1.2",
     "body-parser": "^1.1.2",
     "errorhandler": "^1.0.1",
-    "method-override": "^1.0.0"
+    "method-override": "^1.0.0",
+    "sqlite3": "^2.2.3"
   }
 }
