--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.1.2",
     "errorhandler": "^1.0.1",
     "method-override": "^1.0.0",
-    "sqlite3": "^2.2.3"
+    "sqlite3": "^2.2.3",
+    "socket.io": "^1.0.4"
   }
 }
