Added the bcrypt module for server authentication.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "method-override": "^1.0.0",
     "sqlite3": "^2.2.3",
     "socket.io": "^1.0.4",
-    "crypto": "^0.0.3"
+    "bcrypt-nodejs": "^0.0.3"
   }
 }
